--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
     
         </style>
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <title>Smaran's Car Services.</title>
     <div id="div1">
